<resources>
    <string name="app_name">MediCare</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profil">Profil</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="tv_umur">%s tahun</string>
    <string name="tv_berat_badan">%s kg</string>
    <string name="tv_tinggi_badan">%s cm</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_email">Format email harus benar</string>
    <string name="invalid_password">Kata sandi harus mengandung angka, karakter, tidak ada spasi</string>
    <string name="title_login_page">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login_btn">MASUK</string>
    <string name="no_account">Belum punya akun?</string>
    <string name="register">Daftar Sekarang!</string>
    <string name="title_register_page">Daftar</string>
    <string name="name">Nama</string>
    <string name="has_account">Sudah mempunyai akun?</string>
    <string name="login">Masuk Sekarang!</string>
    <string name="register_btn">DAFTAR</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="title_prediction">Prediksi</string>
    <string name="prediction_button">PREDIKSI</string>
    <string name="hint_symptom">Gejala</string>
    <string name="fab_content_desc">Tambah Gejala</string>
    <string name="username">Username</string>
    <string name="emailOrUsername">Username atau Email</string>
    <string name="name_empty">Silahkan isi nama terlebih dahulu</string>
    <string name="email_empty">Silahkan isi email terlebih dahulu</string>
    <string name="username_empty">Silahkan isi username terlebih dahulu</string>
    <string name="password_empty">Silahkan isi kata sandi terlebih dahulu</string>
    <string name="confirm_password_empty">Ulangi kata sandi</string>
    <string name="confirm_password_not_match">Kata sandi tidak cocok</string>
    <string name="email_or_username_empty">Silahkan isi username atau email terlebih dahulu</string>
    <string name="title_verify_page">Verifikasi Akun</string>
    <string name="verify">Untuk melakukan login, kamu perlu verifikasi akun kamu terlebih dahulu. Kami telah mengirim e-mail verifikasi kepada email kamu. Silahkan cek email kamu. Setelah email telah aktif, selanjutnya silahkan Masuk kembali.</string>
    <string name="password_too_short">Kata sandi harus berisi minimal 8 karakter</string>
    <string name="username_too_short">Username harus berisi minimal 5 karakter</string>
    <string name="kata_sandi_lama">Kata sandi lama*</string>
    <string name="kata_sandi_baru">Kata sandi baru*</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi kata sandi*</string>
    <string name="simpan">SIMPAN</string>
    <string name="password_not_match">Kata sandi tidak cocok</string>
    <string name="password_invalid">8 – 15 karakter, Kombinasi huruf, angka, dan karakter special</string>
    <string name="password_length">Kata sandi harus berisi minimal 8 karakter dan tidak lebih dari 15 karakter</string>
    <string name="empty_field">Field ini tidak boleh kosong</string>
    <string name="fitur_belum_tersedia">Fitur ini belum tersedia</string>
    <string name="berat_badan_kg">Berat Badan (kg)</string>
    <string name="tinggi_badan_cm">Tinggi Badan (cm)</string>
    <string name="tanggal_lahir">Tanggal lahir</string>
    <string name="jenis_kelamin">Jenis kelamin</string>
    <string name="keluar">KELUAR</string>
    <string name="coba_lagi">COBA LAGI</string>
    <string-array name="gejala">
        <item>Otot lemah</item>
        <item>Lesu</item>
        <item>Mata kuning</item>
        <item>Inflamasi kuku</item>
        <item>Gatal</item>
        <item>Jerawat bernanah</item>
        <item>Kram</item>
        <item>Anggota tubuh lemah</item>
        <item>Sakit ketika berjalan</item>
        <item>Mata kemerahan</item>
        <item>Pembesaran tiroid</item>
        <item>Nyeri selama pergerakan usus</item>
        <item>Nyeri di belakang mata</item>
        <item>Dahak kental</item>
        <item>Sembelit</item>
        <item>Nyeri sendi</item>
        <item>Halusinasi</item>
        <item>Kehilangan keseimbangan</item>
        <item>Ruam kulit</item>
        <item>Mual</item>
        <item>Asidosis (gangguan keseimbangan asam-basa)</item>
        <item>Kelelahan</item>
        <item>Nyeri sendi pinggul</item>
        <item>Kabur dan distorsi penglihatan</item>
        <item>Kulit melepuh</item>
        <item>Ucapan cadel</item>
        <item>Tinja berdarah</item>
        <item>Kulit sisik berwarna silver</item>
        <item>Ketidakseimbangan</item>
        <item>Mood swings</item>
        <item>Leher kaku</item>
        <item>Depresi</item>
        <item>Koma</item>
        <item>Urat menonjol di betis</item>
        <item>Kadar gula tidak teratur</item>
        <item>Ketidaknyamanan kandung kemih</item>
        <item>Riwayat konsumsi alkohol</item>
        <item>Detak jantung cepat</item>
        <item>Kulit kekuningan</item>
        <item>Kecemasan</item>
        <item>Dahak</item>
        <item>Kurang konsentrasi</item>
        <item>Menstruasi yang tidak normal</item>
        <item>Dahak berkarat</item>
        <item>Bengkak bagian kaki dan tangan</item>
        <item>Demam ringan</item>
        <item>Dehidrasi</item>
        <item>Penyok kecil di kuku</item>
        <item>Kelebihan cairan</item>
        <item>Nyeri otot</item>
        <item>Perdarahan perut</item>
        <item>Sakit perut (makan berlebih)</item>
        <item>Kontak perkawinan ekstra</item>
        <item>Pilek</item>
        <item>Bercak buang air kecil</item>
        <item>Pertambahan berat badan</item>
        <item>Sakit perut (abdominal pain/lebih serius)</item>
        <item>Sakit punggung</item>
        <item>Kuku rapuh</item>
        <item>Sakit perut</item>
        <item>Kekakuan dalam bergerak</item>
        <item>Luka berwarna kuning kerak</item>
        <item>Kehilangan kemampuan mencium</item>
        <item>Sejarah keluarga</item>
        <item>Memar</item>
        <item>Bintik-bintik merah di sekujur tubuh</item>
        <item>Bersin terus-menerus</item>
        <item>Batuk</item>
        <item>Kepala berputar-putar</item>
        <item>Merah dan sakit di sekitar hidung</item>
        <item>Jantung berdegup kencang</item>
        <item>Berkeringat</item>
        <item>Kencing berwarna kuning</item>
        <item>Kencing berwarna gelap</item>
        <item>Iritasi tenggorokan</item>
        <item>Bercak di tenggorokan</item>
        <item>Pembengkakan perut</item>
        <item>Kehilangan selera makan</item>
        <item>Nyeri dada</item>
        <item>Lapar berlebihan</item>
        <item>Sakit leher</item>
        <item>Benjolan berisi air/kemerahan pada kulit</item>
        <item>Kelemahan dari satu sisi tubuh</item>
        <item>Buang air kecil yang terbakar</item>
        <item>Rasa ingin keluar urin terus menerus</item>
        <item>Wajah dan mata sembab</item>
        <item>Menerima suntikan yang tidak steril</item>
        <item>Gagal hati akut</item>
        <item>Peningkatan nafsu makan</item>
        <item>Menerima transfusi darah</item>
        <item>Kulit mengelupas</item>
        <item>Obesitas</item>
        <item>Komedo</item>
        <item>Panas dingin</item>
        <item>Kaki bengkak</item>
        <item>Pembuluh darah membengkak</item>
        <item>Tidak enak badan</item>
        <item>Kembung</item>
        <item>Frustasi</item>
        <item>Perut buncit</item>
        <item>Nyeri di daerah anus</item>
        <item>Mata cekung</item>
        <item>Iritasi anus</item>
        <item>Urin berbau busuk</item>
        <item>Pembengkakan sendi</item>
        <item>Gangguan otot</item>
        <item>Mata berair</item>
        <item>Sesak nafas</item>
        <item>Penurunan kesadaran</item>
        <item>Muntah</item>
        <item>Gemetaran</item>
        <item>Bisul di lidah</item>
        <item>Gangguan penglihatan</item>
        <item>Gatal dalam tubuh</item>
        <item>Pembengkakan kelenjar limfa</item>
        <item>Bibir kering dan kesemutan</item>
        <item>Kegelisahan</item>
        <item>Tekanan sinus</item>
        <item>Sakit lutut</item>
        <item>Bercak perubahan warna pada kulit</item>
        <item>Demam tinggi</item>
        <item>Penurunan berat badan</item>
        <item>Sakit kepala</item>
        <item>Gangguan pencernaan</item>
        <item>Pusing</item>
        <item>Diare</item>
        <item>Poliuria (Kencing berlebihan)</item>
        <item>Tangan dan kaki dingin</item>
        <item>Penyumbatan</item>
        <item>Batuk/Dahak berdarah</item>
        <item>Berteriak-teriak</item>
    </string-array>
</resources>